# RAGMedicine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
clinic_chat/: __init__.py  chroma_embeddings.py  config.py  local_embeddings.py  memory.py  rag.py  vector_store.py
knowledge_base/: documents.json
scripts/: ingest.py
