[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ragmedicine"
version = "0.1.0"
description = "Chatbot da clínica com memória de sessão, RAG (ChromaDB) e Groq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["clinic_chat"]
